# pembhb

./: .gitmodules  README.md  config.yaml  config_1.yaml  config_td.yaml  datagen_config.yaml  interactive_posterior_visualization.ipynb  pyproject.toml  train_config.yaml
configs/: datagen_config.yaml  train_config.yaml
scripts/: assess_model.py  build_rom.py  evaluate_likelihood_grid.py  evaluate_nre_grid.py  example.py  mcmc.py  mcmc_emcee_vectorized.py  plot_posterior.py  plot_posteriors.py  plot_samples.py  plot_snr.py  pp_plot.py  simulate_data.py  tmnre.py  train_autoencoder.py  visualise_autoencoder.ipynb  visualise_rom.ipynb  visualise_truncation_rounds.py
src/: tutorial.py
src/pembhb/: __init__.py  autoencoder.py  callbacks.py  data.py  diagnostics.py  gpu_utils.py  import_utils.py  model.py  rom.py  rom_v2.py  sampler.py  simulator.py  sky_truncation.py  tmnre.py  utils.py
src/pembhb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_model.py  test_simulator.py
