# Choosing a build backend:
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pembhb"
version = "0.0.1"
description = "tmnre for massive black hole binaries"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Gianmarco Puleo", email = "74814411+g-puleo@users.noreply.github.com" }]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "tests", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]
