[project]
name = "pembhb"
version = "0.1.0"
description = "TMNRE for MBHB parameter estimation in LISA"
authors = [
    {name = "Gianmarco Puleo",email = "gpuleo@sissa.it"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bbhx (==1.1.12)",
    "swyft (==0.4.4)",
    "lisaanalysistools (>=1.0.15,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "pembhb", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
